network-policy/frontend.yaml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  namespace: hrms
  labels:
    app: frontend

spec:
  containers:
  - name: frontend
    image: nginx
