network-policy/mysql.yaml
apiVersion: v1
kind: Pod

metadata:
  name: mysql
  namespace: hrms
  labels:
    app: mysql

spec:
  containers:
  - name: mysql
    image: nginx
