network-policy/tester.yaml
apiVersion: v1
kind: Pod

metadata:
  name: tester
  namespace: hrms
  labels:
    app: tester

spec:
  containers:
  - name: tester
    image: busybox
    command:
      - sleep
      - "36000"
