network-policy/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: hrms

spec:
  selector:
    app: backend

  ports:
  - port: 80
    targetPort: 80
