network-policy/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql
  namespace: hrms

spec:
  selector:
    app: mysql

  ports:
  - port: 80
    targetPort: 80
